<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_contactInfo"
            android:icon="@drawable/contact"
            android:title="@string/menu_contactInfo" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/calculator"
            android:title="@string/menu_calculator" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_datePicker"
                android:icon="@drawable/alarm"
                android:title="@string/menu_datePicker" />
            <item
                android:id="@+id/nav_currencyConverter"
                android:icon="@drawable/currency"
                android:title="@string/menu_currencyConverter" />
        </menu>
    </item>

</menu>
