<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contact_Info"
    android:orientation="vertical"
    android:background="@color/cardview_shadow_end_color"
    >

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="193dp"
        android:layout_height="71dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/call" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phoneNo"
        android:textSize="25dp"
        android:layout_margin="4dp"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="182dp"
        android:layout_height="82dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/email" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/A_email"
        android:textSize="25dp"
        android:layout_margin="4dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/P_email"
        android:textSize="25dp"
        android:layout_margin="4dp"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="193dp"
        android:layout_height="74dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/globe" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Google_link"
        android:textSize="25dp"
        android:layout_margin="4dp"
        android:textStyle="bold"
        />

</LinearLayout>